--- a/html/Store/index.html
+++ b/html/Store/index.html
@@ -9,7 +9,7 @@
             rel="stylesheet"
         />
         <link
-            href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@500&family=Noto+Sans+KR:wght@100;400;700&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100;200;300;400;500;600;700;800;900&display=swap"
             rel="stylesheet"
         />
         <link
@@ -158,11 +158,47 @@
                                                 </p>
                                             </div>
                                         </div>
+                                        <div class="arrow-close">
+                                            <span class="line1"></span>
+                                            <span class="line2"></span>
+                                        </div>
                                     </div>
                                 </button>
                             </li>
                             <li>
                                 <button type="button" class="btn-popup-store1">
+                                    <div class="inner">
+                                        <div class="bgbox">
+                                            <div
+                                                style="
+                                                    background-image: url(http://www.dessert39.com/data/store/thumb-1029907123_DLU6hRwa_EB8C80ECB998ECA090_530x300.jpg);
+                                                "
+                                                class="bg"
+                                            ></div>
+                                        </div>
+                                        <div class="textbox">
+                                            <h4 class="fw700 tit">대치점</h4>
+                                            <div class="fw500 text">
+                                                <h5 class="left">주소</h5>
+                                                <p class="fw300 right">
+                                                    서울 강남구 선릉로64길 28
+                                                    (대치동)
+                                                </p>
+                                            </div>
+                                            <div class="fw500 text">
+                                                <h5 class="left">영업시간</h5>
+                                                <p class="fw300 right"></p>
+                                            </div>
+                                        </div>
+                                        <div class="arrow-close">
+                                            <span class="line1"></span>
+                                            <span class="line2"></span>
+                                        </div>
+                                    </div>
+                                </button>
+                            </li>
+                            <li>
+                                <button type="button" class="btn-popup-store2">
                                     <div class="inner">
                                         <div class="bgbox">
                                             <div
@@ -189,33 +225,9 @@
                                                 </p>
                                             </div>
                                         </div>
-                                    </div>
-                                </button>
-                            </li>
-                            <li>
-                                <button type="button" class="btn-popup-store2">
-                                    <div class="inner">
-                                        <div class="bgbox">
-                                            <div
-                                                style="
-                                                    background-image: url(http://www.dessert39.com/data/store/thumb-1029907123_DLU6hRwa_EB8C80ECB998ECA090_530x300.jpg);
-                                                "
-                                                class="bg"
-                                            ></div>
-                                        </div>
-                                        <div class="textbox">
-                                            <h4 class="fw700 tit">대치점</h4>
-                                            <div class="fw500 text">
-                                                <h5 class="left">주소</h5>
-                                                <p class="fw300 right">
-                                                    서울 강남구 선릉로64길 28
-                                                    (대치동)
-                                                </p>
-                                            </div>
-                                            <div class="fw500 text">
-                                                <h5 class="left">영업시간</h5>
-                                                <p class="fw300 right"></p>
-                                            </div>
+                                        <div class="arrow-close">
+                                            <span class="line1"></span>
+                                            <span class="line2"></span>
                                         </div>
                                     </div>
                                 </button>
@@ -305,7 +317,209 @@
                                 있습니다.
                             </small>
                         </div>
-                        <div class="mapbox"></div>
+                        <!-- <script charset="UTF-8">
+                            new daum.roughmap.Lander({
+                                timestamp: "1649958477031",
+                                key: "29udu",
+                                mapWidth: "640",
+                                mapHeight: "360",
+                            }).render();
+                        </script> -->
+                        <div class="mapbox">
+                            <style>
+                                .mapbox .root_daum_roughmap {
+                                    width: 100% !important;
+                                    height: 100% !important;
+                                }
+                                .mapbox .root_daum_roughmap .wrap_map {
+                                    width: 100% !important;
+                                    height: 100% !important;
+                                }
+                                .mapbox .root_daum_roughmap svg {
+                                    display: none;
+                                }
+                                .mapbox .root_daum_roughmap .wrap_btn_zoom {
+                                    right: unset;
+                                    left: 2.5%;
+                                }
+                                .mapbox .root_daum_roughmap .wrap_controllers {
+                                    display: none !important;
+                                }
+                            </style>
+                            <div
+                                id="daumRoughmapContainer1632447796317"
+                                class="root_daum_roughmap root_daum_roughmap_landing"
+                            ></div>
+                            <!--  <script charset="UTF-8">
+                    new daum.roughmap.Lander({
+                        "timestamp" : "1632447796317",
+                        "key" : "27fy2",
+                        "mapWidth" : "640",
+                        "mapHeight" : "360"
+                    }).render();
+                </script>  -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="popup-store1">
+            <div>
+                <div class="inner store_view">
+                    <div class="popup-top">
+                        <h3 class="tac fw700 popup-tit">대치점</h3>
+                        <button type="button" class="btn-popup-close">
+                            <i class="fas fa-times-circle"></i>
+                        </button>
+                    </div>
+                    <div class="popup-content">
+                        <div class="popup-slider">
+                            <div class="slider-box">
+                                <div
+                                    style="
+                                        background-image: url(http://www.dessert39.com/data/store/thumb-1029907123_DLU6hRwa_EB8C80ECB998ECA090_530x300.jpg);
+                                    "
+                                    class="bg"
+                                ></div>
+                            </div>
+                        </div>
+                        <div class="textbox">
+                            <h4 class="fw700 cate-tit">이용 가능 서비스</h4>
+                            <ul class="fw500 cate-list">
+                                <li>
+                                    <div class="cate">
+                                        <span class="ico takeout"></span>
+                                        <span class="text">포장</span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="cate">
+                                        <span class="ico delivery"></span>
+                                        <span class="text">배달</span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="cate">
+                                        <span class="ico wifi"></span>
+                                        <span class="text">Wifi</span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="cate">
+                                        <span class="ico">
+                                            <i class="fas fa-restroom"></i>
+                                        </span>
+                                        <span class="text">화장실</span>
+                                    </div>
+                                </li>
+                            </ul>
+                            <ul class="fw500 etc-list">
+                                <li>
+                                    <h5 class="left">주소</h5>
+                                    <p class="fw300 right">
+                                        서울 강남구 선릉로64길 28 (대치동)
+                                    </p>
+                                </li>
+                                <li>
+                                    <h5 class="left">전화번호</h5>
+                                    <a
+                                        href="tel:02-552-0702"
+                                        class="fw300 right"
+                                        >02-552-0702</a
+                                    >
+                                </li>
+                                <li>
+                                    <h5 class="left">영업시간</h5>
+                                    <p class="fw300 right"></p>
+                                </li>
+                            </ul>
+                            <small class="ctm fw300 popup-desc">
+                                * 영업시간은 매장 사정에 따라 변동될 수
+                                있습니다.
+                            </small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="popup-store2">
+            <div>
+                <div class="inner store_view">
+                    <div class="popup-top">
+                        <h3 class="tac fw700 popup-tit">학동역점</h3>
+                        <button type="button" class="btn-popup-close">
+                            <i class="fas fa-times-circle"></i>
+                        </button>
+                    </div>
+                    <div class="popup-content">
+                        <div class="popup-slider">
+                            <div class="slider-box">
+                                <div
+                                    style="
+                                        background-image: url(http://www.dessert39.com/data/store/thumb-1029907123_ItihgRrz_ED9599EB8F99EC97ADECA090_530x300.jpg);
+                                    "
+                                    class="bg"
+                                ></div>
+                            </div>
+                        </div>
+                        <div class="textbox">
+                            <h4 class="fw700 cate-tit">이용 가능 서비스</h4>
+                            <ul class="fw500 cate-list">
+                                <li>
+                                    <div class="cate">
+                                        <span class="ico takeout"></span>
+                                        <span class="text">포장</span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="cate">
+                                        <span class="ico delivery"></span>
+                                        <span class="text">배달</span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="cate">
+                                        <span class="ico wifi"></span>
+                                        <span class="text">Wifi</span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="cate">
+                                        <span class="ico">
+                                            <i class="fas fa-restroom"></i>
+                                        </span>
+                                        <span class="text">화장실</span>
+                                    </div>
+                                </li>
+                            </ul>
+                            <ul class="fw500 etc-list">
+                                <li>
+                                    <h5 class="left">주소</h5>
+                                    <p class="fw300 right">
+                                        서울 강남구 학동로 208 (논현동,
+                                        용문빌딩)
+                                    </p>
+                                </li>
+                                <li>
+                                    <h5 class="left">전화번호</h5>
+                                    <a
+                                        href="tel:02-540-5430"
+                                        class="fw300 right"
+                                        >02-540-5430</a
+                                    >
+                                </li>
+                                <li>
+                                    <h5 class="left">영업시간</h5>
+                                    <p class="fw300 right">
+                                        평일 8:00~21:00 / 주말 10:00~22:00
+                                    </p>
+                                </li>
+                            </ul>
+                            <small class="ctm fw300 popup-desc">
+                                * 영업시간은 매장 사정에 따라 변동될 수
+                                있습니다.
+                            </small>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -411,14 +625,14 @@
                 $(".popup-bg").fadeIn();
             });
             $(".btn-popup-store1").click(function () {
-                $(".popup-store").fadeIn();
+                $(".popup-store1").fadeIn();
             });
 
             $(".btn-popup-store1").click(function () {
                 $(".popup-bg").fadeIn();
             });
             $(".btn-popup-store2").click(function () {
-                $(".popup-store").fadeIn();
+                $(".popup-store2").fadeIn();
             });
 
             $(".btn-popup-store2").click(function () {
@@ -428,10 +642,20 @@
             $(".btn-popup-close").click(function () {
                 $(".popup-store").fadeOut();
             });
+            $(".btn-popup-close").click(function () {
+                $(".popup-store1").fadeOut();
+            });
+            $(".btn-popup-close").click(function () {
+                $(".popup-store2").fadeOut();
+            });
 
             $(".btn-popup-close").click(function () {
                 $(".popup-bg").fadeOut();
             });
         });
+
+        // $("button").click(function () {
+        //     toggleClass(".textbox");
+        // });
     </script>
 </html>
