--- a/html/Store/index.html
+++ b/html/Store/index.html
@@ -232,6 +232,77 @@
                                     </div>
                                 </button>
                             </li>
+                            <li>
+                                <button type="button" class="btn-popup-store3">
+                                    <div class="inner">
+                                        <div class="bgbox">
+                                            <div
+                                                style="
+                                                    background-image: url(http://www.dessert39.com/data/store/thumb-977819194_5zgeF0Nr_gyodae_530x300.jpg);
+                                                "
+                                                class="bg"
+                                            ></div>
+                                        </div>
+                                        <div class="textbox">
+                                            <h4 class="fw700 tit">교대점</h4>
+                                            <div class="fw500 text">
+                                                <h5 class="left">주소</h5>
+                                                <p class="fw300 right">
+                                                    서울 서초구 서초중앙로 116
+                                                    (서초동, 성재빌딩)
+                                                </p>
+                                            </div>
+                                            <div class="fw500 text">
+                                                <h5 class="left">영업시간</h5>
+                                                <p class="fw300 right">
+                                                    평일: 07:00~22:00 / 주말
+                                                    08:00~21:00
+                                                </p>
+                                            </div>
+                                        </div>
+                                        <div class="arrow-close">
+                                            <span class="line1"></span>
+                                            <span class="line2"></span>
+                                        </div>
+                                    </div>
+                                </button>
+                            </li>
+                            <li>
+                                <button type="button" class="btn-popup-store4">
+                                    <div class="inner">
+                                        <div class="bgbox">
+                                            <div
+                                                style="
+                                                    background-image: url(http://www.dessert39.com/data/store/thumb-1029907123_N4iVGqzw_EC9EA0EC8BA4EC8388EB82B4EC97ADECA090_530x300.jpg);
+                                                "
+                                                class="bg"
+                                            ></div>
+                                        </div>
+                                        <div class="textbox">
+                                            <h4 class="fw700 tit">
+                                                잠실 새내역점
+                                            </h4>
+                                            <div class="fw500 text">
+                                                <h5 class="left">주소</h5>
+                                                <p class="fw300 right">
+                                                    서울 송파구 올림픽로12길 17
+                                                    (잠실동)
+                                                </p>
+                                            </div>
+                                            <div class="fw500 text">
+                                                <h5 class="left">영업시간</h5>
+                                                <p class="fw300 right">
+                                                    10:00~22:00
+                                                </p>
+                                            </div>
+                                        </div>
+                                        <div class="arrow-close">
+                                            <span class="line1"></span>
+                                            <span class="line2"></span>
+                                        </div>
+                                    </div>
+                                </button>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -317,47 +388,8 @@
                                 있습니다.
                             </small>
                         </div>
-                        <!-- <script charset="UTF-8">
-                            new daum.roughmap.Lander({
-                                timestamp: "1649958477031",
-                                key: "29udu",
-                                mapWidth: "640",
-                                mapHeight: "360",
-                            }).render();
-                        </script> -->
                         <div class="mapbox">
-                            <style>
-                                .mapbox .root_daum_roughmap {
-                                    width: 100% !important;
-                                    height: 100% !important;
-                                }
-                                .mapbox .root_daum_roughmap .wrap_map {
-                                    width: 100% !important;
-                                    height: 100% !important;
-                                }
-                                .mapbox .root_daum_roughmap svg {
-                                    display: none;
-                                }
-                                .mapbox .root_daum_roughmap .wrap_btn_zoom {
-                                    right: unset;
-                                    left: 2.5%;
-                                }
-                                .mapbox .root_daum_roughmap .wrap_controllers {
-                                    display: none !important;
-                                }
-                            </style>
-                            <div
-                                id="daumRoughmapContainer1632447796317"
-                                class="root_daum_roughmap root_daum_roughmap_landing"
-                            ></div>
-                            <!--  <script charset="UTF-8">
-                    new daum.roughmap.Lander({
-                        "timestamp" : "1632447796317",
-                        "key" : "27fy2",
-                        "mapWidth" : "640",
-                        "mapHeight" : "360"
-                    }).render();
-                </script>  -->
+                            <div id="map2"></div>
                         </div>
                     </div>
                 </div>
@@ -437,6 +469,9 @@
                                 * 영업시간은 매장 사정에 따라 변동될 수
                                 있습니다.
                             </small>
+                        </div>
+                        <div class="mapbox">
+                            <div id="map3"></div>
                         </div>
                     </div>
                 </div>
@@ -520,6 +555,168 @@
                                 있습니다.
                             </small>
                         </div>
+                        <div class="mapbox">
+                            <div id="map4"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="popup-store3">
+            <div>
+                <div class="inner">
+                    <div class="popup-top">
+                        <h3 class="tac fw700 popup-tit">교대역점</h3>
+                        <button type="button" class="btn-popup-close">
+                            <i class="fas fa-times-circle"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="popup-content">
+                    <div class="popup-slider">
+                        <div
+                            style="
+                                background-image: url(http://www.dessert39.com/data/store/thumb-977819194_5zgeF0Nr_gyodae_530x300.jpg);
+                            "
+                            class="bg"
+                        ></div>
+                    </div>
+                    <div class="textbox">
+                        <h4 class="fw700 cate-tit">이용 가능 서비스</h4>
+                        <ul class="fw500 cate-list">
+                            <li>
+                                <div class="cate">
+                                    <span class="ico takeout"></span>
+                                    <span class="text">포장</span>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="cate">
+                                    <span class="ico delivery"></span>
+                                    <span class="text">배달</span>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="cate">
+                                    <span class="ico wifi"></span>
+                                    <span class="text">Wifi</span>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="cate">
+                                    <span class="ico">
+                                        <i class="fas fa-restroom"></i>
+                                    </span>
+                                    <span class="text">화장실</span>
+                                </div>
+                            </li>
+                        </ul>
+                        <ul class="fw500 etc-list">
+                            <li>
+                                <h5 class="left">주소</h5>
+                                <p class="fw300 right">
+                                    서울 서초구 서초중앙로 116 (서초동,
+                                    성재빌딩)
+                                </p>
+                            </li>
+                            <li>
+                                <h5 class="left">전화번호</h5>
+                                <a href="tel:02-3474-0098" class="fw300 right"
+                                    >02-3474-0098</a
+                                >
+                            </li>
+                            <li>
+                                <h5 class="left">영업시간</h5>
+                                <p class="fw300 right">
+                                    평일: 07:00~22:00 / 주말 08:00~21:00
+                                </p>
+                            </li>
+                        </ul>
+                        <small class="ctm fw300 popup-desc">
+                            * 영업시간은 매장 사정에 따라 변동될 수 있습니다.
+                        </small>
+                    </div>
+                    <div class="mapbox">
+                        <div id="map5"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="popup-store4">
+            <div>
+                <div class="inner">
+                    <div class="popup-top">
+                        <h3 class="tac fw700 popup-tit">잠실 새내역점</h3>
+                        <button type="button" class="btn-popup-close">
+                            <i class="fas fa-times-circle"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="popup-content">
+                    <div class="popup-slider">
+                        <div
+                            style="
+                                background-image: url(http://www.dessert39.com/data/store/thumb-1029907123_N4iVGqzw_EC9EA0EC8BA4EC8388EB82B4EC97ADECA090_530x300.jpg);
+                            "
+                            class="bg"
+                        ></div>
+                    </div>
+                    <div class="textbox">
+                        <h4 class="fw700 cate-tit">이용 가능 서비스</h4>
+                        <ul class="fw500 cate-list">
+                            <li>
+                                <div class="cate">
+                                    <span class="ico takeout"></span>
+                                    <span class="text">포장</span>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="cate">
+                                    <span class="ico delivery"></span>
+                                    <span class="text">배달</span>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="cate">
+                                    <span class="ico wifi"></span>
+                                    <span class="text">Wifi</span>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="cate">
+                                    <span class="ico">
+                                        <i class="fas fa-restroom"></i>
+                                    </span>
+                                    <span class="text">화장실</span>
+                                </div>
+                            </li>
+                        </ul>
+                        <ul class="fw500 etc-list">
+                            <li>
+                                <h5 class="left">주소</h5>
+                                <p class="fw300 right">
+                                    서울 송파구 올림픽로12길 17 (잠실동)
+                                </p>
+                            </li>
+                            <li>
+                                <h5 class="left">전화번호</h5>
+                                <a href="tel:02-3474-0098" class="fw300 right"
+                                    >02-3474-0098</a
+                                >
+                            </li>
+                            <li>
+                                <h5 class="left">영업시간</h5>
+                                <p class="fw300 right">
+                                    평일: 07:00~22:00 / 주말 08:00~21:00
+                                </p>
+                            </li>
+                        </ul>
+                        <small class="ctm fw300 popup-desc">
+                            * 영업시간은 매장 사정에 따라 변동될 수 있습니다.
+                        </small>
+                    </div>
+                    <div class="mapbox">
+                        <div id="map6"></div>
                     </div>
                 </div>
             </div>
@@ -612,8 +809,68 @@
             // addMarker(positions[i], i);
         }
 
+        // ------------팝업 지도 부분-------------
+        var container2 = document.getElementById("map2");
+        var options2 = {
+            center: new kakao.maps.LatLng(37.499269, 127.043305),
+            level: 5,
+        };
+
+        var map2 = new kakao.maps.Map(container2, options2);
+        // 마커가 표시될 위치
+        var markerPosition = new kakao.maps.LatLng(37.495509, 127.027212);
+
+        var container3 = document.getElementById("map3");
+        var options3 = {
+            center: new kakao.maps.LatLng(37.499269, 127.043305),
+            level: 5,
+        };
+
+        var map3 = new kakao.maps.Map(container3, options3);
+        // 마커가 표시될 위치
+        var markerPosition = new kakao.maps.LatLng(37.495509, 127.027212);
+
+        var container4 = document.getElementById("map4");
+        var options4 = {
+            center: new kakao.maps.LatLng(37.499269, 127.043305),
+            level: 5,
+        };
+
+        var map4 = new kakao.maps.Map(container4, options4);
+        // 마커가 표시될 위치
+        var markerPosition = new kakao.maps.LatLng(37.495509, 127.027212);
+
+        var container5 = document.getElementById("map5");
+        var options5 = {
+            center: new kakao.maps.LatLng(37.499269, 127.043305),
+            level: 5,
+        };
+
+        var map5 = new kakao.maps.Map(container5, options5);
+        // 마커가 표시될 위치
+        var markerPosition = new kakao.maps.LatLng(37.495509, 127.027212);
+
+        var container6 = document.getElementById("map6");
+        var options6 = {
+            center: new kakao.maps.LatLng(37.499269, 127.043305),
+            level: 5,
+        };
+
+        var map6 = new kakao.maps.Map(container6, options6);
+        // 마커가 표시될 위치
+        var markerPosition = new kakao.maps.LatLng(37.495509, 127.027212);
+
         // 마커가 지도 위에 표시되도록 설정
         marker.setMap(map);
+        marker.setMap(map2);
+        marker.setMap(map3);
+        marker.setMap(map4);
+        marker.setMap(map5);
+        marker.setMap(map6);
+
+        setTimeout(function () {
+            map.relayout();
+        }, 0);
         // ------------- 카카오 웹 api 자바스크립트 부분 끝 -------------
         // ------------- 팝업 스토어 시작 -------------
         $(function () {
