--- a/html/Brand/index.html
+++ b/html/Brand/index.html
@@ -78,37 +78,9 @@
                     id="daumRoughmapContainer1649955303507"
                     class="root_daum_roughmap root_daum_roughmap_landing"
                 ></div>
-                <!-- <div class="custom_zoomcontrol radius_border">
-                    <span onclick="zoomIn()">
-                        <img
-                            src="http://t1.daumcdn.net/localimg/localimages/07/2018/pc/detail/img_zoom.png"
-                            alt="확대"
-                        />
-                    </span>
-                    <span onclick="zoomOut()">
-                        <img
-                            src="http://t1.daumcdn.net/localimg/localimages/07/2018/pc/detail/img_zoom.png"
-                            alt="축소"
-                        />
-                    </span>
-                </div> -->
-                <!-- -------------맵 버튼 시작(이었던 것)------------- -->
-                <!-- <div class="wrap_btn_zoom">
-                    <button class="btn_zoom_in hide_text" onclick="zoomIn()">
-                        <span class="img_zoom">확대</span>
-                    </button>
-
-                    <button class="btn_zoom_out hide_text" onclick="zoomOut()">
-                        <span class="img_zoom">축소</span>
-                    </button>
-
-                    <button class="btn_zoom_reset hide_text">
-                        <span class="img_zoom">초기화</span>
-                    </button>
-                </div> -->
-                <!-- -------------맵 버튼 끝------------- -->
             </div>
         </div>
+        <a href="./store.html">매장찾기</a>
     </body>
     <!-- * 카카오맵 - 지도퍼가기 -->
     <!--
@@ -126,7 +98,7 @@
         new daum.roughmap.Lander({
             timestamp: "1649955303507",
             key: "29uds",
-            mapWidth: "1440",
+            mapWidth: "1419",
             mapHeight: "470",
         }).render();
     </script>
