--- a/html/Store/store.html
+++ b/html/Store/store.html
@@ -722,7 +722,6 @@
             </div>
         </div>
         <div class="popup-bg"></div>
-        <a href="./index.html">오시는 길</a>
     </body>
     <!--------------- 카카오 맵 api 자바스크립트 부분 --------------->
     <script
@@ -869,6 +868,13 @@
         marker.setMap(map5);
         marker.setMap(map6);
 
+        function relayout() {
+            // 지도를 표시하는 div 크기를 변경한 이후 지도가 정상적으로 표출되지 않을 수도 있습니다
+            // 크기를 변경한 이후에는 반드시  map.relayout 함수를 호출해야 합니다
+            // window의 resize 이벤트에 의한 크기변경은 map.relayout 함수가 자동으로 호출됩니다
+            map.relayout();
+        }
+
         // setTimeout(function () {
         //     map.relayout();
         // }, 0);
@@ -878,22 +884,35 @@
             $(".btn-popup-store").click(function () {
                 $(".popup-store").fadeIn();
             });
-
             $(".btn-popup-store").click(function () {
                 $(".popup-bg").fadeIn();
             });
+
             $(".btn-popup-store1").click(function () {
                 $(".popup-store1").fadeIn();
             });
-
             $(".btn-popup-store1").click(function () {
                 $(".popup-bg").fadeIn();
             });
+
             $(".btn-popup-store2").click(function () {
                 $(".popup-store2").fadeIn();
             });
-
             $(".btn-popup-store2").click(function () {
+                $(".popup-bg").fadeIn();
+            });
+
+            $(".btn-popup-store3").click(function () {
+                $(".popup-store2").fadeIn();
+            });
+            $(".btn-popup-store3").click(function () {
+                $(".popup-bg").fadeIn();
+            });
+
+            $(".btn-popup-store4").click(function () {
+                $(".popup-store4").fadeIn();
+            });
+            $(".btn-popup-store4").click(function () {
                 $(".popup-bg").fadeIn();
             });
 
@@ -905,6 +924,12 @@
             });
             $(".btn-popup-close").click(function () {
                 $(".popup-store2").fadeOut();
+            });
+            $(".btn-popup-close").click(function () {
+                $(".popup-store3").fadeOut();
+            });
+            $(".btn-popup-close").click(function () {
+                $(".popup-store4").fadeOut();
             });
 
             $(".btn-popup-close").click(function () {
