--- a/html/Store/store.html
+++ b/html/Store/store.html
@@ -66,46 +66,81 @@
                         <h3 class="fw700 tac info-tit">이용 가능 서비스</h3>
                         <ul class="fw500 cate-list">
                             <li>
-                                <button class="btn-cate">
+                                <label class="btn-cate">
+                                    <input
+                                        type="checkbox"
+                                        id=""
+                                        name="service1"
+                                        value="1"
+                                        class="check-input hidden"
+                                    />
                                     <span class="textbox">
                                         <span class="ico takeout"></span>
                                         <span class="text">포장</span>
                                     </span>
-                                </button>
+                                </label>
                             </li>
                             <li>
-                                <button class="btn-cate">
+                                <label class="btn-cate">
+                                    <input
+                                        type="checkbox"
+                                        id=""
+                                        name="service2"
+                                        value="2"
+                                        class="check-input hidden"
+                                    />
                                     <span class="textbox">
                                         <span class="ico delivery"></span>
                                         <span class="text">배달</span>
                                     </span>
-                                </button>
+                                </label>
                             </li>
                             <li>
-                                <button class="btn-cate">
+                                <label class="btn-cate">
+                                    <input
+                                        type="checkbox"
+                                        id=""
+                                        name="service3"
+                                        value="3"
+                                        class="check-input hidden"
+                                    />
                                     <span class="textbox">
                                         <span class="ico parking"></span>
                                         <span class="text">주차</span>
                                     </span>
-                                </button>
+                                </label>
                             </li>
                             <li>
-                                <button class="btn-cate">
+                                <label class="btn-cate">
+                                    <input
+                                        type="checkbox"
+                                        id=""
+                                        name="service4"
+                                        value="4"
+                                        class="check-input hidden"
+                                    />
                                     <span class="textbox">
                                         <span class="ico wifi"></span>
                                         <span class="text">Wifi</span>
                                     </span>
-                                </button>
+                                </label>
                             </li>
                             <li>
-                                <button class="btn-cate">
+                                <label class="btn-cate">
+                                    <input
+                                        type="checkbox"
+                                        id=""
+                                        name="service5"
+                                        value="5"
+                                        class="check-input hidden"
+                                    />
                                     <span class="textbox">
-                                        <span class="ico">
-                                            <i class="fas fa-restroom"></i>
-                                        </span>
+                                        <span class="ico"
+                                            ><i class="fas fa-restroom"></i
+                                        ></span>
                                         <span class="text">화장실</span>
                                     </span>
-                                </button>
+                                </label>
                             </li>
                         </ul>
                         <h3 class="fw700 tac info-tit">지역별 매장 안내</h3>
@@ -731,7 +766,7 @@
     <script>
         var container = document.getElementById("map");
         var options = {
-            center: new kakao.maps.LatLng(37.499269, 127.043305),
+            center: new kakao.maps.LatLng(37.495509, 127.027212),
             level: 5,
         };
 
@@ -812,53 +847,48 @@
         // ------------팝업 지도 부분-------------
         var container2 = document.getElementById("map2");
         var options2 = {
-            center: new kakao.maps.LatLng(37.499269, 127.043305),
+            center: new kakao.maps.LatLng(37.496579, 127.02634),
             level: 5,
         };
-
         var map2 = new kakao.maps.Map(container2, options2);
         // 마커가 표시될 위치
-        var markerPosition = new kakao.maps.LatLng(37.495509, 127.027212);
+        var markerPosition = new kakao.maps.LatLng(37.496579, 127.02634);
 
         var container3 = document.getElementById("map3");
         var options3 = {
-            center: new kakao.maps.LatLng(37.499269, 127.043305),
+            center: new kakao.maps.LatLng(37.498166, 127.054502),
             level: 5,
         };
-
         var map3 = new kakao.maps.Map(container3, options3);
         // 마커가 표시될 위치
-        var markerPosition = new kakao.maps.LatLng(37.495509, 127.027212);
+        var markerPosition = new kakao.maps.LatLng(37.498166, 127.054502);
 
         var container4 = document.getElementById("map4");
         var options4 = {
-            center: new kakao.maps.LatLng(37.499269, 127.043305),
+            center: new kakao.maps.LatLng(37.514005, 127.031981),
             level: 5,
         };
-
         var map4 = new kakao.maps.Map(container4, options4);
         // 마커가 표시될 위치
-        var markerPosition = new kakao.maps.LatLng(37.495509, 127.027212);
+        var markerPosition = new kakao.maps.LatLng(37.514005, 127.031981);
 
         var container5 = document.getElementById("map5");
         var options5 = {
-            center: new kakao.maps.LatLng(37.499269, 127.043305),
+            center: new kakao.maps.LatLng(37.492041, 127.014215),
             level: 5,
         };
-
         var map5 = new kakao.maps.Map(container5, options5);
         // 마커가 표시될 위치
-        var markerPosition = new kakao.maps.LatLng(37.495509, 127.027212);
+        var markerPosition = new kakao.maps.LatLng(37.492041, 127.014215);
 
         var container6 = document.getElementById("map6");
         var options6 = {
-            center: new kakao.maps.LatLng(37.499269, 127.043305),
+            center: new kakao.maps.LatLng(37.510039, 127.083296),
             level: 5,
         };
-
         var map6 = new kakao.maps.Map(container6, options6);
         // 마커가 표시될 위치
-        var markerPosition = new kakao.maps.LatLng(37.495509, 127.027212);
+        var markerPosition = new kakao.maps.LatLng(37.510039, 127.083296);
 
         // 마커가 지도 위에 표시되도록 설정
         marker.setMap(map);
@@ -868,21 +898,17 @@
         marker.setMap(map5);
         marker.setMap(map6);
 
-        function relayout() {
-            // 지도를 표시하는 div 크기를 변경한 이후 지도가 정상적으로 표출되지 않을 수도 있습니다
-            // 크기를 변경한 이후에는 반드시  map.relayout 함수를 호출해야 합니다
-            // window의 resize 이벤트에 의한 크기변경은 map.relayout 함수가 자동으로 호출됩니다
-            map.relayout();
-        }
+        map.relayout();
+        // console.log(map2);
 
-        // setTimeout(function () {
-        //     map.relayout();
-        // }, 0);
         // ------------- 카카오 웹 api 자바스크립트 부분 끝 -------------
         // ------------- 팝업 스토어 시작 -------------
         $(function () {
             $(".btn-popup-store").click(function () {
                 $(".popup-store").fadeIn();
+                window.setTimeout(function () {
+                    map.relayout();
+                }, 0);
             });
             $(".btn-popup-store").click(function () {
                 $(".popup-bg").fadeIn();
@@ -903,7 +929,7 @@
             });
 
             $(".btn-popup-store3").click(function () {
-                $(".popup-store2").fadeIn();
+                $(".popup-store3").fadeIn();
             });
             $(".btn-popup-store3").click(function () {
                 $(".popup-bg").fadeIn();
@@ -934,6 +960,24 @@
 
             $(".btn-popup-close").click(function () {
                 $(".popup-bg").fadeOut();
+            });
+            $(".popup-bg").click(function () {
+                $(".popup-bg").fadeOut();
+            });
+            $(".popup-bg").click(function () {
+                $(".popup-store").fadeOut();
+            });
+            $(".popup-bg").click(function () {
+                $(".popup-store1").fadeOut();
+            });
+            $(".popup-bg").click(function () {
+                $(".popup-store2").fadeOut();
+            });
+            $(".popup-bg").click(function () {
+                $(".popup-store3").fadeOut();
+            });
+            $(".popup-bg").click(function () {
+                $(".popup-store4").fadeOut();
             });
         });
         // map.relayout();
