--- a/html/Store/store.html
+++ b/html/Store/store.html
@@ -606,73 +606,76 @@
                             <i class="fas fa-times-circle"></i>
                         </button>
                     </div>
-                </div>
-                <div class="popup-content">
-                    <div class="popup-slider">
-                        <div
-                            style="
-                                background-image: url(http://www.dessert39.com/data/store/thumb-977819194_5zgeF0Nr_gyodae_530x300.jpg);
-                            "
-                            class="bg"
-                        ></div>
-                    </div>
-                    <div class="textbox">
-                        <h4 class="fw700 cate-tit">이용 가능 서비스</h4>
-                        <ul class="fw500 cate-list">
-                            <li>
-                                <div class="cate">
-                                    <span class="ico takeout"></span>
-                                    <span class="text">포장</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="cate">
-                                    <span class="ico delivery"></span>
-                                    <span class="text">배달</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="cate">
-                                    <span class="ico wifi"></span>
-                                    <span class="text">Wifi</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="cate">
-                                    <span class="ico">
-                                        <i class="fas fa-restroom"></i>
-                                    </span>
-                                    <span class="text">화장실</span>
-                                </div>
-                            </li>
-                        </ul>
-                        <ul class="fw500 etc-list">
-                            <li>
-                                <h5 class="left">주소</h5>
-                                <p class="fw300 right">
-                                    서울 서초구 서초중앙로 116 (서초동,
-                                    성재빌딩)
-                                </p>
-                            </li>
-                            <li>
-                                <h5 class="left">전화번호</h5>
-                                <a href="tel:02-3474-0098" class="fw300 right"
-                                    >02-3474-0098</a
-                                >
-                            </li>
-                            <li>
-                                <h5 class="left">영업시간</h5>
-                                <p class="fw300 right">
-                                    평일: 07:00~22:00 / 주말 08:00~21:00
-                                </p>
-                            </li>
-                        </ul>
-                        <small class="ctm fw300 popup-desc">
-                            * 영업시간은 매장 사정에 따라 변동될 수 있습니다.
-                        </small>
-                    </div>
-                    <div class="mapbox">
-                        <div id="map5"></div>
+                    <div class="popup-content">
+                        <div class="popup-slider">
+                            <div
+                                style="
+                                    background-image: url(http://www.dessert39.com/data/store/thumb-977819194_5zgeF0Nr_gyodae_530x300.jpg);
+                                "
+                                class="bg"
+                            ></div>
+                        </div>
+                        <div class="textbox">
+                            <h4 class="fw700 cate-tit">이용 가능 서비스</h4>
+                            <ul class="fw500 cate-list">
+                                <li>
+                                    <div class="cate">
+                                        <span class="ico takeout"></span>
+                                        <span class="text">포장</span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="cate">
+                                        <span class="ico delivery"></span>
+                                        <span class="text">배달</span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="cate">
+                                        <span class="ico wifi"></span>
+                                        <span class="text">Wifi</span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="cate">
+                                        <span class="ico">
+                                            <i class="fas fa-restroom"></i>
+                                        </span>
+                                        <span class="text">화장실</span>
+                                    </div>
+                                </li>
+                            </ul>
+                            <ul class="fw500 etc-list">
+                                <li>
+                                    <h5 class="left">주소</h5>
+                                    <p class="fw300 right">
+                                        서울 서초구 서초중앙로 116 (서초동,
+                                        성재빌딩)
+                                    </p>
+                                </li>
+                                <li>
+                                    <h5 class="left">전화번호</h5>
+                                    <a
+                                        href="tel:02-3474-0098"
+                                        class="fw300 right"
+                                        >02-3474-0098</a
+                                    >
+                                </li>
+                                <li>
+                                    <h5 class="left">영업시간</h5>
+                                    <p class="fw300 right">
+                                        평일: 07:00~22:00 / 주말 08:00~21:00
+                                    </p>
+                                </li>
+                            </ul>
+                            <small class="ctm fw300 popup-desc">
+                                * 영업시간은 매장 사정에 따라 변동될 수
+                                있습니다.
+                            </small>
+                        </div>
+                        <div class="mapbox">
+                            <div id="map5"></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -686,72 +689,99 @@
                             <i class="fas fa-times-circle"></i>
                         </button>
                     </div>
-                </div>
-                <div class="popup-content">
-                    <div class="popup-slider">
-                        <div
-                            style="
-                                background-image: url(http://www.dessert39.com/data/store/thumb-1029907123_N4iVGqzw_EC9EA0EC8BA4EC8388EB82B4EC97ADECA090_530x300.jpg);
-                            "
-                            class="bg"
-                        ></div>
-                    </div>
-                    <div class="textbox">
-                        <h4 class="fw700 cate-tit">이용 가능 서비스</h4>
-                        <ul class="fw500 cate-list">
-                            <li>
-                                <div class="cate">
-                                    <span class="ico takeout"></span>
-                                    <span class="text">포장</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="cate">
-                                    <span class="ico delivery"></span>
-                                    <span class="text">배달</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="cate">
-                                    <span class="ico wifi"></span>
-                                    <span class="text">Wifi</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="cate">
-                                    <span class="ico">
-                                        <i class="fas fa-restroom"></i>
-                                    </span>
-                                    <span class="text">화장실</span>
-                                </div>
-                            </li>
-                        </ul>
-                        <ul class="fw500 etc-list">
-                            <li>
-                                <h5 class="left">주소</h5>
-                                <p class="fw300 right">
-                                    서울 송파구 올림픽로12길 17 (잠실동)
-                                </p>
-                            </li>
-                            <li>
-                                <h5 class="left">전화번호</h5>
-                                <a href="tel:02-3474-0098" class="fw300 right"
-                                    >02-3474-0098</a
-                                >
-                            </li>
-                            <li>
-                                <h5 class="left">영업시간</h5>
-                                <p class="fw300 right">
-                                    평일: 07:00~22:00 / 주말 08:00~21:00
-                                </p>
-                            </li>
-                        </ul>
-                        <small class="ctm fw300 popup-desc">
-                            * 영업시간은 매장 사정에 따라 변동될 수 있습니다.
-                        </small>
-                    </div>
-                    <div class="mapbox">
-                        <div id="map6"></div>
+                    <div class="popup-content">
+                        <div class="popup-slider">
+                            <div
+                                style="
+                                    background-image: url(http://www.dessert39.com/data/store/thumb-1029907123_N4iVGqzw_EC9EA0EC8BA4EC8388EB82B4EC97ADECA090_530x300.jpg);
+                                "
+                                class="bg"
+                            ></div>
+                        </div>
+                        <div class="textbox">
+                            <h4 class="fw700 cate-tit">이용 가능 서비스</h4>
+                            <ul class="fw500 cate-list">
+                                <li>
+                                    <div class="cate">
+                                        <span class="ico takeout"></span>
+                                        <span class="text">포장</span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="cate">
+                                        <span class="ico delivery"></span>
+                                        <span class="text">배달</span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="cate">
+                                        <span class="ico wifi"></span>
+                                        <span class="text">Wifi</span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="cate">
+                                        <span class="ico">
+                                            <i class="fas fa-restroom"></i>
+                                        </span>
+                                        <span class="text">화장실</span>
+                                    </div>
+                                </li>
+                            </ul>
+                            <ul class="fw500 etc-list">
+                                <li>
+                                    <h5 class="left">주소</h5>
+                                    <p class="fw300 right">
+                                        서울 송파구 올림픽로12길 17 (잠실동)
+                                    </p>
+                                </li>
+                                <li>
+                                    <h5 class="left">전화번호</h5>
+                                    <a
+                                        href="tel:02-3474-0098"
+                                        class="fw300 right"
+                                        >02-3474-0098</a
+                                    >
+                                </li>
+                                <li>
+                                    <h5 class="left">영업시간</h5>
+                                    <p class="fw300 right">
+                                        평일: 07:00~22:00 / 주말 08:00~21:00
+                                    </p>
+                                </li>
+                            </ul>
+                            <small class="ctm fw300 popup-desc">
+                                * 영업시간은 매장 사정에 따라 변동될 수
+                                있습니다.
+                            </small>
+                        </div>
+                        <div class="mapbox">
+                            <!-- <style>
+                                .mapbox .root_daum_roughmap {
+                                    width: 100% !important;
+                                    height: 100% !important;
+                                }
+                                .mapbox .root_daum_roughmap .wrap_map {
+                                    width: 100% !important;
+                                    height: 100% !important;
+                                }
+                                .mapbox .root_daum_roughmap svg {
+                                    display: none;
+                                }
+                                .mapbox .root_daum_roughmap .wrap_btn_zoom {
+                                    right: unset;
+                                    left: 2.5%;
+                                }
+                                .mapbox .root_daum_roughmap .wrap_controllers {
+                                    display: none !important;
+                                }
+                            </style> -->
+                            <div id="map6"></div>
+                            <!-- <div
+                                id="daumRoughmapContainer1650337051699"
+                                class="root_daum_roughmap root_daum_roughmap_landing"
+                            ></div> -->
+                        </div>
                     </div>
                 </div>
             </div>
@@ -759,6 +789,21 @@
         <div class="popup-bg"></div>
     </body>
     <!--------------- 카카오 맵 api 자바스크립트 부분 --------------->
+    <!-- <script
+        charset="UTF-8"
+        class="daum_roughmap_loader_script"
+        src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"
+    ></script>
+    <!-- 3. 실행 스크립트 -->
+    <script charset="UTF-8">
+        new daum.roughmap.Lander({
+            timestamp: "1650337051699",
+            key: "29vrc",
+            mapWidth: "530",
+            mapHeight: "300",
+        }).render();
+    </script>
+    -->
     <script
         type="text/javascript"
         src="//dapi.kakao.com/v2/maps/sdk.js?appkey=f7ce88603e0054baaf1a5d1193a98451"
@@ -898,7 +943,7 @@
         marker.setMap(map5);
         marker.setMap(map6);
 
-        map.relayout();
+        // map.relayout();
         // console.log(map2);
 
         // ------------- 카카오 웹 api 자바스크립트 부분 끝 -------------
@@ -906,40 +951,33 @@
         $(function () {
             $(".btn-popup-store").click(function () {
                 $(".popup-store").fadeIn();
-                window.setTimeout(function () {
-                    map.relayout();
-                }, 0);
+                map.relayout();
+                map.setCenter(new kakao.maps.LatLng(37.496579, 127.02634));
             });
-            $(".btn-popup-store").click(function () {
+            $(
+                ".btn-popup-store, .btn-popup-store1, .btn-popup-store2, .btn-popup-store3, .btn-popup-store4"
+            ).click(function () {
                 $(".popup-bg").fadeIn();
             });
 
             $(".btn-popup-store1").click(function () {
                 $(".popup-store1").fadeIn();
-            });
-            $(".btn-popup-store1").click(function () {
-                $(".popup-bg").fadeIn();
+                map.relayout();
             });
 
             $(".btn-popup-store2").click(function () {
                 $(".popup-store2").fadeIn();
-            });
-            $(".btn-popup-store2").click(function () {
-                $(".popup-bg").fadeIn();
+                map.relayout();
             });
 
             $(".btn-popup-store3").click(function () {
                 $(".popup-store3").fadeIn();
-            });
-            $(".btn-popup-store3").click(function () {
-                $(".popup-bg").fadeIn();
+                map.relayout();
             });
 
             $(".btn-popup-store4").click(function () {
                 $(".popup-store4").fadeIn();
-            });
-            $(".btn-popup-store4").click(function () {
-                $(".popup-bg").fadeIn();
+                map.relayout();
             });
 
             $(".btn-popup-close").click(function () {
