--- a/html/Store/store.html
+++ b/html/Store/store.html
@@ -897,29 +897,29 @@
         var markerPosition6 = new kakao.maps.LatLng(37.510039, 127.083296);
 
         // 마커를 생성합니다
-        var marker = new kakao.maps.Marker({
+        var marker2 = new kakao.maps.Marker({
             position: markerPosition2,
         });
-        var marker = new kakao.maps.Marker({
+        var marker3 = new kakao.maps.Marker({
             position: markerPosition3,
         });
-        var marker = new kakao.maps.Marker({
+        var marker4 = new kakao.maps.Marker({
             position: markerPosition4,
         });
-        var marker = new kakao.maps.Marker({
+        var marker5 = new kakao.maps.Marker({
             position: markerPosition5,
         });
-        var marker = new kakao.maps.Marker({
+        var marker6 = new kakao.maps.Marker({
             position: markerPosition6,
         });
 
         // 마커가 지도 위에 표시되도록 설정
         // marker.setMap(map);
-        marker.setMap(map2);
-        marker.setMap(map3);
-        marker.setMap(map4);
-        marker.setMap(map5);
-        marker.setMap(map6);
+        marker2.setMap(map2);
+        marker3.setMap(map3);
+        marker4.setMap(map4);
+        marker5.setMap(map5);
+        marker6.setMap(map6);
 
         // map.relayout();
         // console.log(map2);
